--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     src: url(src/fontes/idroid.otf) format('opentype');
     font-weight: normal;
 }
+
 :root {
     --cor0: #c5ebd6;
     --cor1: #83e1ad;
@@ -28,21 +29,52 @@ body {
     font-family: var(--fonte-padrao);
 }
 header {
-    background-image: linear-gradient(var(--cor0), var(--cor5));
+    background-image: linear-gradient(var(--cor3), var(--cor5));
+    padding-top: 30px;
+    min-height: 100px;
+    text-align: center;
 }
 header > h1 {
-    color: white;
-    text-align: center;
+    color: white;    
     font-family: var(--fonte-destaque);
+    font-size: 3em;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.479)
 }
 header > p {
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
     color: white;
+    max-width: 500px;
+    margin: auto;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.479)
 }
 nav {
-    background-color: var(--cor5);
+    background-image: linear-gradient(var(--cor5), black);
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.427);
+}
+nav > a {
+    color: white;
+    padding: 10px;
+    font-weight: bold;
+    transition-duration: 0.6s;
+    border-radius: 5px;
+}
+nav > a:hover {
+    background-color: var(--cor3);
+    color: var(--cor5);
+    border-radius: 5px;
 }
 main {
     background-color: white;
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.381);
+    margin-bottom: 30px;
+    border-radius: 0px 0px 10px 10px;
 }
 main h1 {
     color: var(--cor5);
@@ -51,10 +83,46 @@ main h1 {
 main h2 {
     font-family: var(--fonte-android);
 }
+main img {
+    width: 100%;
+}
+main img.pequena {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+main p {
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 30px;
+    font-size: 1em;
+    line-height: 2em;
+}
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
+}
+main a {
+    font-weight: bold;
+    color: var(--cor5);
+    background-color: var(--cor2);
+    padding: 2px 6px;
+}
+main a:hover {
+    text-decoration: underline;
+    color: var(--cor2);
+    background-color: var(--cor5);
+}
+article {
 
+}
+aside {
+
+}
 footer {
     background-color: var(--cor5);
     color: white;
+    text-align: center;
 }
 a {
     text-decoration: none;
